# recipebook

./: .drone.yml  README.md
app/: .env  Dockerfile  package-lock.json  package.json  svelte.config.js
app/src/: app.html
app/src/components/: DraggableList.svelte  PageTransition.svelte  Recipe.svelte  RecipeCard.svelte  WarningModal.svelte
app/src/components/input/: ImageUpload.svelte  TextArea.svelte
app/src/routes/: __layout.svelte  index.svelte  recipes.json.ts
app/src/routes/recipes/: [uuid].json.ts  [uuid].svelte  index.svelte  upload.json.ts
app/src/store/: recipes.ts
infrastructure/lambdas/: build_all  update
infrastructure/lambdas/src/: db.rs  lib.rs
infrastructure/lambdas/src/data/: ingredient.rs
infrastructure/terraform/: main.tf  variables.tf
infrastructure/terraform/apigw/: main.tf  output.tf  variables.tf
infrastructure/terraform/dynamo/: main.tf  variables.tf
infrastructure/terraform/lambdas/: main.tf  output.tf  variables.tf
infrastructure/terraform/lambdas/recipes/: main.tf  output.tf  variables.tf
infrastructure/terraform/lambdas/upload/: main.tf  output.tf
infrastructure/terraform/s3/: main.tf
lambdas/: .gitignore  Cargo.toml
lambdas/src/data/: mod.rs  recipe.rs
