[package]
name = "lambdas"
version = "0.1.0"
authors = ["Rory N <rorynickolls@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
lambda_runtime = "0.3.0"
lambda_http = "0.3.0"
http = "0.2.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.3.0", features = ["full"] }
futures = "0.3.14"
bytes = "1"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_credential = "0.46.0"
async-trait = "0.1.50"
rusoto_sts = "0.46.0"
serde_dynamodb = "0.7.0"
openssl={ version="0.10.33", features=['vendored'] }
regex = "1"
image = "0.23"
base64 = "0.13.0"
uuid = { version = "0.8", features = ["serde", "v4"] }